--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url('../../node_modules/@fortawesome/fontawesome-free/css/all.min.css');
+@import '~jquery-ui/themes/base/all.css';
 
 @tailwind base;
 @tailwind components;
